# Poker-Analysis

./: CMakeLists.txt  Card.cpp  Card.h  CardHand.h  CardHandScorer.h  CardHand_Cards.cpp  CardHand_Cards.h  PokerScore.h  README.md  calculateOutput.h  card_class.h  deck_class.h  main.cpp  ranks_struct.h  suits_struct.h
